initial styling finished

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </nav>
     <main role="main" aria-live="assertive">
-      <div class="captured white">
+      <div class="white-captures">
 
       </div>
         <div class="board">
@@ -117,7 +117,7 @@
           </div>
         </div>
 
-      <div class="captured black">
+      <div class="black-captures">
         
       </div>
     </main>
