--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Shogi Online</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="movements.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body role="document">
@@ -17,103 +18,103 @@
       </div>
         <div class="board">
           <div class="row r1">
-            <div class="square" id="9一"></div>
-            <div class="square" id="8一"></div>
-            <div class="square" id="7一"></div>
-            <div class="square" id="6一"></div>
-            <div class="square" id="5一"></div>
-            <div class="square" id="4一"></div>
-            <div class="square" id="3一"></div>
-            <div class="square" id="2一"></div>
-            <div class="square" id="1一"></div>
+            <div class="square" id="91"></div>
+            <div class="square" id="81"></div>
+            <div class="square" id="71"></div>
+            <div class="square" id="61"></div>
+            <div class="square" id="51"></div>
+            <div class="square" id="41"></div>
+            <div class="square" id="31"></div>
+            <div class="square" id="21"></div>
+            <div class="square" id="11"></div>
           </div>
           <div class="row r2">
-            <div class="square" id="9二"></div>
-            <div class="square" id="8二"></div>
-            <div class="square" id="7二"></div>
-            <div class="square" id="6二"></div>
-            <div class="square" id="5二"></div>
-            <div class="square" id="4二"></div>
-            <div class="square" id="3二"></div>
-            <div class="square" id="2二"></div>
-            <div class="square" id="1二"></div>
+            <div class="square" id="92"></div>
+            <div class="square" id="82"></div>
+            <div class="square" id="72"></div>
+            <div class="square" id="62"></div>
+            <div class="square" id="52"></div>
+            <div class="square" id="42"></div>
+            <div class="square" id="32"></div>
+            <div class="square" id="22"></div>
+            <div class="square" id="12"></div>
           </div>
           <div class="row r3">
-            <div class="square" id="9三"></div>
-            <div class="square" id="8三"></div>
-            <div class="square" id="7三"></div>
-            <div class="square" id="6三"></div>
-            <div class="square" id="5三"></div>
-            <div class="square" id="4三"></div>
-            <div class="square" id="3三"></div>
-            <div class="square" id="2三"></div>
-            <div class="square" id="1三"></div>
+            <div class="square" id="93"></div>
+            <div class="square" id="83"></div>
+            <div class="square" id="73"></div>
+            <div class="square" id="63"></div>
+            <div class="square" id="53"></div>
+            <div class="square" id="43"></div>
+            <div class="square" id="33"></div>
+            <div class="square" id="23"></div>
+            <div class="square" id="13"></div>
           </div>
           <div class="row r4">
-            <div class="square" id="9四"></div>
-            <div class="square" id="8四"></div>
-            <div class="square" id="7四"></div>
-            <div class="square" id="6四"></div>
-            <div class="square" id="5四"></div>
-            <div class="square" id="4四"></div>
-            <div class="square" id="3四"></div>
-            <div class="square" id="2四"></div>
-            <div class="square" id="1四"></div>
+            <div class="square" id="94"></div>
+            <div class="square" id="84"></div>
+            <div class="square" id="74"></div>
+            <div class="square" id="64"></div>
+            <div class="square" id="54"></div>
+            <div class="square" id="44"></div>
+            <div class="square" id="34"></div>
+            <div class="square" id="24"></div>
+            <div class="square" id="14"></div>
           </div>
           <div class="row r5">
-            <div class="square" id="9五"></div>
-            <div class="square" id="8五"></div>
-            <div class="square" id="7五"></div>
-            <div class="square" id="6五"></div>
-            <div class="square" id="5五"></div>
-            <div class="square" id="4五"></div>
-            <div class="square" id="3五"></div>
-            <div class="square" id="2五"></div>
-            <div class="square" id="1五"></div>
+            <div class="square" id="95"></div>
+            <div class="square" id="85"></div>
+            <div class="square" id="75"></div>
+            <div class="square" id="65"></div>
+            <div class="square" id="55"></div>
+            <div class="square" id="45"></div>
+            <div class="square" id="35"></div>
+            <div class="square" id="25"></div>
+            <div class="square" id="15"></div>
           </div>
           <div class="row r6">
-            <div class="square" id="9六"></div>
-            <div class="square" id="8六"></div>
-            <div class="square" id="7六"></div>
-            <div class="square" id="6六"></div>
-            <div class="square" id="5六"></div>
-            <div class="square" id="4六"></div>
-            <div class="square" id="3六"></div>
-            <div class="square" id="2六"></div>
-            <div class="square" id="1六"></div>
+            <div class="square" id="96"></div>
+            <div class="square" id="86"></div>
+            <div class="square" id="76"></div>
+            <div class="square" id="66"></div>
+            <div class="square" id="56"></div>
+            <div class="square" id="46"></div>
+            <div class="square" id="36"></div>
+            <div class="square" id="26"></div>
+            <div class="square" id="16"></div>
           </div>
           <div class="row r7">
-            <div class="square" id="9七"></div>
-            <div class="square" id="8七"></div>
-            <div class="square" id="7七"></div>
-            <div class="square" id="6七"></div>
-            <div class="square" id="5七"></div>
-            <div class="square" id="4七"></div>
-            <div class="square" id="3七"></div>
-            <div class="square" id="2七"></div>
-            <div class="square" id="1七"></div>
+            <div class="square" id="97"></div>
+            <div class="square" id="87"></div>
+            <div class="square" id="77"></div>
+            <div class="square" id="67"></div>
+            <div class="square" id="57"></div>
+            <div class="square" id="47"></div>
+            <div class="square" id="37"></div>
+            <div class="square" id="27"></div>
+            <div class="square" id="17"></div>
           </div>
           <div class="row r8">
-            <div class="square" id="9八"></div>
-            <div class="square" id="8八"></div>
-            <div class="square" id="7八"></div>
-            <div class="square" id="6八"></div>
-            <div class="square" id="5八"></div>
-            <div class="square" id="4八"></div>
-            <div class="square" id="3八"></div>
-            <div class="square" id="2八"></div>
-            <div class="square" id="1八"></div>
+            <div class="square" id="98"></div>
+            <div class="square" id="88"></div>
+            <div class="square" id="78"></div>
+            <div class="square" id="68"></div>
+            <div class="square" id="58"></div>
+            <div class="square" id="48"></div>
+            <div class="square" id="38"></div>
+            <div class="square" id="28"></div>
+            <div class="square" id="18"></div>
           </div>
           <div class="row r9">
-            <div class="square" id="9九"></div>
-            <div class="square" id="8九"></div>
-            <div class="square" id="7九"></div>
-            <div class="square" id="6九"></div>
-            <div class="square" id="5九"></div>
-            <div class="square" id="4九"></div>
-            <div class="square" id="3九"></div>
-            <div class="square" id="2九"></div>
-            <div class="square" id="1九"></div>
+            <div class="square" id="99"></div>
+            <div class="square" id="89"></div>
+            <div class="square" id="79"></div>
+            <div class="square" id="69"></div>
+            <div class="square" id="59"></div>
+            <div class="square" id="49"></div>
+            <div class="square" id="39"></div>
+            <div class="square" id="29"></div>
+            <div class="square" id="19"></div>
           </div>
         </div>
 
@@ -123,5 +124,6 @@
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./game.js"></script>
+    <script src="./game-properties.js"></script>
   </body>
 </html>
